[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.0.5" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
k256 = { version = "0.13", features = ["serde"] }
rand_core = "0.6.4"
serde_json = "1.0.122"